# python-envs

./: .gitignore  README.md
2401-py310/: pyproject.toml
py310-commonlit/: pyproject.toml
py310-poetry151-torch201/: pyproject.toml  selfish-add-libs.txt
