[tool.poetry]
name = "2401-py310"
version = "0.1.0"
description = ""
authors = ["yoshihiro <osaka.yoshihiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = ">=2.0.3"
polars = ">=0.18.9"
numba = "^0.57.1"
seaborn = ">=0.12.2"
matplotlib = ">=3.7.2"
folium = "^0.14.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
lightgbm = ">=3.3.5"
catboost = "^1.2"
xgboost = "^1.7.6"
timm = "^0.9.2"
albumentations = "^1.3.1"
gensim = "^4.3.1"
transformers = "^4.30.2"
tokenizers = "^0.13.3"
nltk = "^3.8.1"
seglearn = "^1.2.5"
networkx = "^3.1"
torch-geometric = "^2.3.1"
pyarrow = "^12.0.1"
ipython = "^8.14.0"
ipykernel = "^6.24.0"
librosa = "^0.10.0.post2"
gputil = "^1.4.0"
pandas-profiling = "^3.6.6"
category-encoders = "^2.6.1"
matplotlib-venn = "^0.11.9"
sentencepiece = "^0.1.99"
ipywidgets = "^8.0.7"
python-levenshtein = "^0.21.1"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
pyautogui = "^0.9.54"
pycld2 = "^0.41"
optuna = "^3.2.0"
wordcloud = "^1.9.2"
mecab-python3 = "^1.0.6"
unidic-lite = "^1.0.8"
implicit = "^0.7.0"
segmentation-models-pytorch = "^0.3.3"
pytorch-lightning = "^2.0.7"
protobuf = "3.20.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
langchain = "^0.0.309"
openai = "^0.28.1"
datasets = "^2.14.5"
faiss-gpu = "^1.7.2"
sentence-transformers = "^2.2.2"
blingfire = "^0.1.8"
wikiextractor = "^3.0.6"
tslearn = "^0.6.2"
fastdtw = "^0.3.4"
hydra-core = "^1.3.2"
irspack = "^0.3.1"
japanize-matplotlib = "^1.1.3"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
